# reels_factory

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.example.json
docs/: architecture.md  assets.md  llm.md  publishing-notes.md
src/reels_factory/: __init__.py  cli.py  config.py  flask_oauth.py  ingest.py  instagram_api.py  paths.py  render.py  rewrite.py  utils.py
tests/: test_utils.py
